# XROSS

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  paper.md  pyproject.toml  xross_v1.0.0.py
.github/workflows/: ci.yml
art/: button_ex01.csv
build_exe/: ANACONDA_BUILD.bat  BUILD_EXE.bat  XROSS.spec  build.py
doc/: journal_hayase_v1.docx
examples/: euv_mosi_reflectivity.py  optimization_csv.py  xrr_thin_film.py
geo/: EUV_MoSi.csv  EUV_RuSi.csv  Mo_monolayer.csv
paper/: paper.bib  paper.md
save/: 20250802_040706_pairs.csv
src/: f3_tone.py
tests/: test_core.py  test_fileio.py  test_optimize.py  test_xrr.py
xrdml/: Reflectivity_Batch_20250521_Mo0521.xrdml  Reflectivity_Batch_20260202_2602B01 for upload.csv  Reflectivity_Batch_20260202_2602B01.csv
xross/: __init__.py  __main__.py  core.py  fileio.py  optimize.py  xrr.py
xross/gui/: __init__.py  app.py  euv_window.py  image_window.py  opt_window.py  xrr_window.py
