[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xross"
version = "2.0.1"
description = "XROSS – X-Ray Optics Simulation Software for multilayer reflectivity and XRR analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Naoki Hayase", email = "nhayase@example.com"},
]
keywords = ["X-ray", "EUV", "multilayer", "reflectivity", "XRR", "thin-film", "optics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.22",
    "pandas>=1.4",
    "matplotlib>=3.5",
    "scikit-learn>=1.1",
    "optuna>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/nhayase/XROSS"
Documentation = "https://github.com/nhayase/XROSS#readme"
Repository = "https://github.com/nhayase/XROSS"
Issues = "https://github.com/nhayase/XROSS/issues"

[project.scripts]
xross = "xross.__main__:main"

[project.gui-scripts]
xross-gui = "xross.__main__:main"

[tool.setuptools.packages.find]
include = ["xross*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
